// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`composition hook should return with Dialog props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-labelledby": undefined,
  "children": <Context.Provider
    value={
      Object {
        "colorMode": "default",
        "descriptionId": "id-test",
        "titleId": "id-test",
      }
    }
  >
    <React.Fragment>
      <Dialog.Content>
        <Box
          width="100%"
        />
      </Dialog.Content>
    </React.Fragment>
  </Context.Provider>,
  "className": "css-1wc5oy8 css-63it0p css-1qnz8fc bb-Box bb-Dialog",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-6 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`overrides Dialog.Close.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`overrides Dialog.Content.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-3 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`overrides Dialog.Footer.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-white600, #000000);
  padding: 1.25rem 1.5rem;
}

.emotion-9 {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
  <div
    class="emotion-9 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogFooter"
  >
    This is a footer
  </div>
</div>
`;

exports[`overrides Dialog.Header.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  margin-bottom: 1rem;
}

.emotion-9 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-12 {
  font-size: 1.25em;
  font-weight: 600;
}

abbr.emotion-13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-13 {
  font-family: monospace;
}

i.emotion-13 {
  font-style: italic;
}

kbd.emotion-13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-13 {
  font-weight: bold;
}

sub.emotion-13,
sup.emotion-13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-13,
u.emotion-13 {
  text-decoration-skip: ink edges;
}

i.emotion-13,
cite.emotion-13,
var.emotion-13,
em.emotion-13 {
  font-style: italic;
}

kbd.emotion-13,
pre.emotion-13,
samp.emotion-13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-13 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      <div
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-12 emotion-13 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a title
        </span>
      </div>
      hello world
    </div>
  </div>
</div>
`;

exports[`overrides Dialog.IconWrapper.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`overrides Dialog.Title.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  margin-bottom: 1rem;
}

.emotion-12 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-12 {
  background-color: var(--bb-palette-red, #ff0000);
}

abbr.emotion-13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-13 {
  font-family: monospace;
}

i.emotion-13 {
  font-style: italic;
}

kbd.emotion-13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-13 {
  font-weight: bold;
}

sub.emotion-13,
sup.emotion-13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-13,
u.emotion-13 {
  text-decoration-skip: ink edges;
}

i.emotion-13,
cite.emotion-13,
var.emotion-13,
em.emotion-13 {
  font-style: italic;
}

kbd.emotion-13,
pre.emotion-13,
samp.emotion-13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-13 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      <div
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-12 emotion-13 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a title
        </span>
      </div>
      hello world
    </div>
  </div>
</div>
`;

exports[`overrides Dialog.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`props should render correctly for standalone 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  width: 600px!important;
}

.emotion-3 {
  margin-bottom: 1rem;
}

.emotion-6 {
  font-size: 1.25em;
  font-weight: 600;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-10 {
  margin-right: 1rem;
}

.emotion-10 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-10 .bb-CalloutContent .bb-Icon {
  font-size: 1.25em;
}

.emotion-21 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-23 {
  color: var(--bb-palette-info, #000000)!important;
}

.emotion-24 {
  padding: 1.5rem;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-28 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-white600, #000000);
  padding: 1.25rem 1.5rem;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-1 emotion-5 bb-Box bb-DialogHeader"
  >
    <span
      class="emotion-6 emotion-7 emotion-1 emotion-5 bb-Box bb-Text bb-DialogTitle"
      id="id-test"
    >
      <span
        class="emotion-10 emotion-7 emotion-1 emotion-5 bb-Box bb-Text bb-DialogIconWrapper"
      >
        <div
          class="emotion-3 emotion-1 emotion-5 bb-Box bb-DialogHeader"
        >
          <span
            class="emotion-6 emotion-7 emotion-1 emotion-5 bb-Box bb-Text bb-DialogTitle"
            id="id-test"
          >
            <svg
              aria-hidden="true"
              class="emotion-21 emotion-1 emotion-23 bb-Box bb-Icon"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </span>
      Example Dialog
    </span>
  </div>
  <div
    class="emotion-24 emotion-25 emotion-1 emotion-5 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
  <div
    class="emotion-28 emotion-25 emotion-1 emotion-5 bb-Box bb-Flex bb-DialogFooter"
  >
    This is a footer
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-6 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      Hello world
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a close button 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  margin-bottom: 1rem;
}

.emotion-12 {
  font-size: 1.25em;
  font-weight: 600;
}

abbr.emotion-13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-13 {
  font-family: monospace;
}

i.emotion-13 {
  font-style: italic;
}

kbd.emotion-13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-13 {
  font-weight: bold;
}

sub.emotion-13,
sup.emotion-13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-13,
u.emotion-13 {
  text-decoration-skip: ink edges;
}

i.emotion-13,
cite.emotion-13,
var.emotion-13,
em.emotion-13 {
  font-style: italic;
}

kbd.emotion-13,
pre.emotion-13,
samp.emotion-13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-13 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-16.emotion-16 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-17[disabled],
.emotion-17[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-17:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-17:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-17:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-17 {
  background-color: unset;
  border: unset;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  box-shadow: unset;
}

.emotion-17:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.emotion-17:hover:active {
  background-color: rgba(0, 0, 0, 0.1);
}

.emotion-20 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  font-size: 1.25rem!important;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      <div
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-12 emotion-13 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          Hello world
        </span>
        <button
          class="emotion-16 emotion-17 emotion-1 emotion-2 test bb-Box bb-Button bb-ButtonClose"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="emotion-20 emotion-1 emotion-22 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 320 512"
          >
            <path
              d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span
            style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
          >
            Close
          </span>
        </button>
      </div>
      Hello world
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a footer 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  margin-bottom: 1rem;
}

.emotion-12 {
  font-size: 1.25em;
  font-weight: 600;
}

abbr.emotion-13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-13 {
  font-family: monospace;
}

i.emotion-13 {
  font-style: italic;
}

kbd.emotion-13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-13 {
  font-weight: bold;
}

sub.emotion-13,
sup.emotion-13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-13,
u.emotion-13 {
  text-decoration-skip: ink edges;
}

i.emotion-13,
cite.emotion-13,
var.emotion-13,
em.emotion-13 {
  font-style: italic;
}

kbd.emotion-13,
pre.emotion-13,
samp.emotion-13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-13 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-white600, #000000);
  padding: 1.25rem 1.5rem;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      <div
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-12 emotion-13 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          Hello world
        </span>
      </div>
      Hello world
    </div>
  </div>
  <div
    class="emotion-16 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogFooter"
  >
    This is a footer
  </div>
</div>
`;

exports[`props should render correctly with a title 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  margin-bottom: 1rem;
}

.emotion-12 {
  font-size: 1.25em;
  font-weight: 600;
}

abbr.emotion-13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-13 {
  font-family: monospace;
}

i.emotion-13 {
  font-style: italic;
}

kbd.emotion-13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-13 {
  font-weight: bold;
}

sub.emotion-13,
sup.emotion-13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-13,
u.emotion-13 {
  text-decoration-skip: ink edges;
}

i.emotion-13,
cite.emotion-13,
var.emotion-13,
em.emotion-13 {
  font-style: italic;
}

kbd.emotion-13,
pre.emotion-13,
samp.emotion-13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-13 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      <div
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-12 emotion-13 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a dialog
        </span>
      </div>
      Hello world
    </div>
  </div>
</div>
`;

exports[`props should render correctly with action buttons 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  margin-bottom: 1rem;
}

.emotion-12 {
  font-size: 1.25em;
  font-weight: 600;
}

abbr.emotion-13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-13 {
  font-family: monospace;
}

i.emotion-13 {
  font-style: italic;
}

kbd.emotion-13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-13 {
  font-weight: bold;
}

sub.emotion-13,
sup.emotion-13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-13,
u.emotion-13 {
  text-decoration-skip: ink edges;
}

i.emotion-13,
cite.emotion-13,
var.emotion-13,
em.emotion-13 {
  font-style: italic;
}

kbd.emotion-13,
pre.emotion-13,
samp.emotion-13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-13 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-white600, #000000);
  padding: 1.25rem 1.5rem;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-21.emotion-21.emotion-21>* {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-24 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-default, #000000);
  border-radius: 6px;
  color: var(--bb-palette-defaultInverted, #000000);
  fill: var(--bb-palette-defaultInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid var(--bb-palette-white900, #000000);
}

.emotion-24[disabled],
.emotion-24[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-24:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-gray200, #000000) 0px 0px 0px 1px,var(--bb-palette-gray100, #000000) 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-24:hover {
  background-color: var(--bb-palette-white600, #000000);
}

.emotion-24:hover:active {
  background-color: var(--bb-palette-white800, #000000);
}

.emotion-27 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-danger, #000000);
  border-radius: 6px;
  color: var(--bb-palette-dangerInverted, #000000);
  fill: var(--bb-palette-dangerInverted, #000000);
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.75rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  padding: 0 1rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-27[disabled],
.emotion-27[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-27:focus {
  outline: unset;
  z-index: 2;
  box-shadow: var(--bb-palette-danger, #000000) 0px 0px 0px 1px,var(--bb-palette-danger200, #000000) 0px 0px 0px 3px;
}

.emotion-27:hover {
  background-color: var(--bb-palette-danger600, #000000);
}

.emotion-27:hover:active {
  background-color: var(--bb-palette-danger700, #000000);
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      <div
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-12 emotion-13 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          Hello world
        </span>
      </div>
      Hello world
    </div>
  </div>
  <div
    class="emotion-16 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogFooter"
  >
    <div
      class="emotion-20 emotion-21 emotion-1 emotion-2 bb-Box bb-Set bb-ActionButtons"
    >
      <button
        class="emotion-24 emotion-1 emotion-2 bb-Box bb-Button"
        type="button"
      >
        Cancel
      </button>
      <button
        class="emotion-27 emotion-1 emotion-2 bb-Box bb-Button"
        type="submit"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`props type should render correctly with type danger 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  margin-right: 1rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-7 .bb-CalloutContent .bb-Icon {
  font-size: 1.25em;
}

abbr.emotion-8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-8 {
  font-family: monospace;
}

i.emotion-8 {
  font-style: italic;
}

kbd.emotion-8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-8 {
  font-weight: bold;
}

sub.emotion-8,
sup.emotion-8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-8,
u.emotion-8 {
  text-decoration-skip: ink edges;
}

i.emotion-8,
cite.emotion-8,
var.emotion-8,
em.emotion-8 {
  font-style: italic;
}

kbd.emotion-8,
pre.emotion-8,
samp.emotion-8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-8 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  margin-bottom: 1rem;
}

.emotion-14 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-18 {
  fill: var(--bb-palette-danger, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-danger, #000000)!important;
}

.emotion-22 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <span
      class="emotion-7 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogIconWrapper"
    >
      <div
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-14 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-20 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
    <div
      class="emotion-1 emotion-22 bb-Box"
    >
      <div
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-14 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a dialog
        </span>
      </div>
      Hello world
    </div>
  </div>
</div>
`;

exports[`props type should render correctly with type info 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  margin-right: 1rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-7 .bb-CalloutContent .bb-Icon {
  font-size: 1.25em;
}

abbr.emotion-8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-8 {
  font-family: monospace;
}

i.emotion-8 {
  font-style: italic;
}

kbd.emotion-8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-8 {
  font-weight: bold;
}

sub.emotion-8,
sup.emotion-8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-8,
u.emotion-8 {
  text-decoration-skip: ink edges;
}

i.emotion-8,
cite.emotion-8,
var.emotion-8,
em.emotion-8 {
  font-style: italic;
}

kbd.emotion-8,
pre.emotion-8,
samp.emotion-8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-8 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  margin-bottom: 1rem;
}

.emotion-14 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-18 {
  fill: var(--bb-palette-info, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-info, #000000)!important;
}

.emotion-22 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <span
      class="emotion-7 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogIconWrapper"
    >
      <div
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-14 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-20 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
    <div
      class="emotion-1 emotion-22 bb-Box"
    >
      <div
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-14 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a dialog
        </span>
      </div>
      Hello world
    </div>
  </div>
</div>
`;

exports[`props type should render correctly with type success 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  margin-right: 1rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-7 .bb-CalloutContent .bb-Icon {
  font-size: 1.25em;
}

abbr.emotion-8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-8 {
  font-family: monospace;
}

i.emotion-8 {
  font-style: italic;
}

kbd.emotion-8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-8 {
  font-weight: bold;
}

sub.emotion-8,
sup.emotion-8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-8,
u.emotion-8 {
  text-decoration-skip: ink edges;
}

i.emotion-8,
cite.emotion-8,
var.emotion-8,
em.emotion-8 {
  font-style: italic;
}

kbd.emotion-8,
pre.emotion-8,
samp.emotion-8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-8 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  margin-bottom: 1rem;
}

.emotion-14 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-18 {
  fill: var(--bb-palette-success, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-success, #000000)!important;
}

.emotion-22 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <span
      class="emotion-7 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogIconWrapper"
    >
      <div
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-14 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-20 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 512 512"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
    <div
      class="emotion-1 emotion-22 bb-Box"
    >
      <div
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-14 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a dialog
        </span>
      </div>
      Hello world
    </div>
  </div>
</div>
`;

exports[`props type should render correctly with type warning 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 {
  margin-right: 1rem;
}

.emotion-7 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-7 .bb-CalloutContent .bb-Icon {
  font-size: 1.25em;
}

abbr.emotion-8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-8 {
  font-family: monospace;
}

i.emotion-8 {
  font-style: italic;
}

kbd.emotion-8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-8 {
  font-weight: bold;
}

sub.emotion-8,
sup.emotion-8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-8,
u.emotion-8 {
  text-decoration-skip: ink edges;
}

i.emotion-8,
cite.emotion-8,
var.emotion-8,
em.emotion-8 {
  font-style: italic;
}

kbd.emotion-8,
pre.emotion-8,
samp.emotion-8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-8 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-11 {
  margin-bottom: 1rem;
}

.emotion-14 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-18 {
  fill: var(--bb-palette-warning, #000000);
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-20 {
  color: var(--bb-palette-warning, #000000)!important;
}

.emotion-22 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <span
      class="emotion-7 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogIconWrapper"
    >
      <div
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-14 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          <svg
            aria-hidden="true"
            class="emotion-18 emotion-1 emotion-20 bb-Box bb-Icon"
            role="img"
            viewBox="0 0 576 512"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </div>
    </span>
    <div
      class="emotion-1 emotion-22 bb-Box"
    >
      <div
        class="emotion-11 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-14 emotion-8 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a dialog
        </span>
      </div>
      Hello world
    </div>
  </div>
</div>
`;

exports[`theming Dialog.Close.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`theming Dialog.Content.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-3 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`theming Dialog.Footer.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: var(--bb-palette-white600, #000000);
  padding: 1.25rem 1.5rem;
}

.emotion-9 {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
  <div
    class="emotion-9 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogFooter"
  >
    This is a footer
  </div>
</div>
`;

exports[`theming Dialog.Header.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  margin-bottom: 1rem;
}

.emotion-9 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-12 {
  font-size: 1.25em;
  font-weight: 600;
}

abbr.emotion-13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-13 {
  font-family: monospace;
}

i.emotion-13 {
  font-style: italic;
}

kbd.emotion-13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-13 {
  font-weight: bold;
}

sub.emotion-13,
sup.emotion-13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-13,
u.emotion-13 {
  text-decoration-skip: ink edges;
}

i.emotion-13,
cite.emotion-13,
var.emotion-13,
em.emotion-13 {
  font-style: italic;
}

kbd.emotion-13,
pre.emotion-13,
samp.emotion-13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-13 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      <div
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-12 emotion-13 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a title
        </span>
      </div>
      hello world
    </div>
  </div>
</div>
`;

exports[`theming Dialog.IconWrapper.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`theming Dialog.Title.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

.emotion-9 {
  margin-bottom: 1rem;
}

.emotion-12 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-12 {
  background-color: var(--bb-palette-red, #ff0000);
}

abbr.emotion-13 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-13 {
  font-family: monospace;
}

i.emotion-13 {
  font-style: italic;
}

kbd.emotion-13 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-13 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-13 {
  font-weight: bold;
}

sub.emotion-13,
sup.emotion-13 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-13,
u.emotion-13 {
  text-decoration-skip: ink edges;
}

i.emotion-13,
cite.emotion-13,
var.emotion-13,
em.emotion-13 {
  font-style: italic;
}

kbd.emotion-13,
pre.emotion-13,
samp.emotion-13 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-13 .bb-Icon {
  vertical-align: -0.125em;
}

<div
  aria-describedby="id-test"
  aria-labelledby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      <div
        class="emotion-9 emotion-1 emotion-2 bb-Box bb-DialogHeader"
      >
        <span
          class="emotion-12 emotion-13 emotion-1 emotion-2 bb-Box bb-Text bb-DialogTitle"
          id="id-test"
        >
          This is a title
        </span>
      </div>
      hello world
    </div>
  </div>
</div>
`;

exports[`theming Dialog.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  background-color: var(--bb-palette-background, #000000);
  overflow: hidden;
  position: relative;
  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.15),0px 0px 2px 1px rgba(0, 0, 0, 0.02);
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  padding: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  width: 100%!important;
}

<div
  aria-describedby="id-test"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Dialog"
>
  <div
    class="emotion-3 emotion-4 emotion-1 emotion-2 bb-Box bb-Flex bb-DialogContent"
    id="id-test"
  >
    <div
      class="emotion-1 emotion-8 bb-Box"
    >
      hello world
    </div>
  </div>
</div>
`;
